fix: modal alignment

--- a/frontend/src/scss/layout/_buttons.scss
+++ b/frontend/src/scss/layout/_buttons.scss
@@ -65,19 +65,25 @@ button,
 }
 
 .btn-group {
+	column-gap: rem(14.7);
+
 	> .btn:not(:first-child) {
-		margin-left: 2px;
+		margin-left: 0px;
 	}
 	> .btn:not(.dropdown-toggle),
 	.ticket-pick {
 		border-radius: $border-radius !important;
-		margin-right: rem(16);
-		padding: rem(26) rem(24);
+		padding: rem(26) rem(25.7);
 		border: none;
 		background-color: $gray-300;
 		color: $text-muted;
 		font-size: $body-2;
 		flex: 0;
+
+		@include breakpoint-min(md) {
+			// padding-right: rem(25);
+			// padding-left: rem(25);
+		}
 	}
 	label.btn:hover,
 	label.btn:focus {
